z-index fix

--- a/app/assets/stylesheets/common/display.scss
+++ b/app/assets/stylesheets/common/display.scss
@@ -112,3 +112,13 @@
     padding-left: 0;
   }
 }
+
+
+// bug fix
+
+.z-index-fix {
+  -webkit-transform:translateZ(1px);
+  -moz-transform:translateZ(1px);
+  -o-transform:translateZ(1px);
+  transform:translateZ(1px);
+}
